# quaero

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.es.md  README.md  ROADMAP.md  THIRD-PARTY.md  index.html
.claude/: settings.json
.claude/agents/: driver-builder.md  quaero-reviewer.md
.claude/skills/quaero-driver/: SKILL.md
.claude/skills/quaero-feature/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  driver_request.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.rules/: c-core.md  drivers.md  frontend.md  general.md  git.md  ipc.md  testing.md
app/: CMakeLists.txt  quaero.rc.in
app/include/: frontend_assets.h
app/src/: main.c  main.cc
app/tests/: CMakeLists.txt  embed_test.c
assets/brand/: BRAND.md
assets/icons/: README.md  pack-icons.mjs  quaero.desktop  quaero.icns
assets/media/: MEDIA-KIT.md  social-preview.html
cmake/: EmbedAssets.cmake  QuaeroDriverSDKConfig.cmake.in  QuaeroLibpq.cmake  QuaeroLibssh2.cmake  QuaeroMariaDB.cmake  QuaeroMongoc.cmake  QuaeroWarnings.cmake  toolchain-i686-mingw.cmake
cmake/libpq-win32/: README.md  pg_config.h  pg_config_ext.h  pg_config_os.h  pg_config_paths.h
cmake/libpq-win32/shims/: netdb.h
cmake/patches/: mariadb-connector-c-stdcall.cmake
core/: CMakeLists.txt
core/include/dbcore/: conn.h  dbcore.h  driver.h  edit.h  ipc.h  loader.h  op_registry.h  query.h  result.h  runtime.h  schema.h  status.h  tx.h
core/src/: runtime.c  version.c
core/src/conn/: conn_util.c  conn_util.h  dsn_rewrite.c  dsn_rewrite.h  manager.c  ssh_config.c  ssh_config.h  ssh_tunnel.c  ssh_tunnel.h
core/src/driver/: loader.c  plugin_name.c  validate.c
core/src/ipc/: conn_methods.c  conn_methods.h  dispatch.c  edit_methods.c  edit_methods.h  methods.c  methods.h  op_methods.c  op_methods.h  query_methods.c  query_methods.h  result_json.c  result_json.h  rpc.c  rpc.h  schema_methods.c  schema_methods.h  tx_methods.c  tx_methods.h
core/src/query/: edit.c  materialize.c  materialize.h  op_registry.c  result.c  result_priv.h  run.c  schema.c  tx.c
core/tests/: CMakeLists.txt  runtime_test.c  version_test.c
core/tests/conn/: dsn_rewrite_test.c  manager_test.c  ssh_config_test.c
core/tests/driver/: loader_test.c  plugin_name_test.c  status_test.c  validate_test.c
core/tests/driver/fixtures/: bad_abi_driver.c  good_driver.c  no_entry.c
core/tests/ipc/: conn_methods_test.c  dispatch_test.c  op_cancel_test.c  query_run_test.c  result_json_test.c
core/tests/query/: op_registry_test.c  query_test.c  schema_test.c  tx_test.c
docs/: ARCHITECTURE.md  DRIVER_API.md  IPC.md  MCP.md  MONGODB.md  QA-MATRIX.md  QA-SMOKE.md  SHORTCUTS.md  SITE.md  VERSIONING.md  WRITING_A_DRIVER.md
drivers/: CMakeLists.txt
drivers/informix/: CMakeLists.txt
drivers/informix/src/: connection.c  ddl.c  edit.c  entry.c  internal.h  metadata.c  query.c
drivers/informix/src/utils/: connstr.c  connstr.h  dml.c  dml.h  odbc_types.c  odbc_types.h  types.c  types.h
drivers/informix/tests/: cancel_test.c  connstr_test.c  dml_test.c  odbc_types_test.c  types_test.c
drivers/mongodb/: CMakeLists.txt
drivers/mongodb/src/: connection.c  entry.c  internal.h  metadata.c  query.c
drivers/mongodb/src/utils/: bson_types.c  bson_types.h  columns.c  columns.h  json_relax.c  json_relax.h  query_parse.c  query_parse.h  result.c  result.h  value_fmt.c  value_fmt.h
drivers/mongodb/tests/: bson_types_test.c  columns_test.c  json_relax_test.c  query_parse_test.c  result_test.c  value_fmt_test.c
drivers/mysql/: CMakeLists.txt
drivers/mysql/src/: connection.c  ddl.c  edit.c  entry.c  internal.h  metadata.c  query.c
drivers/mysql/src/utils/: dml.c  dml.h  identifier.c  identifier.h  ssl.c  ssl.h  types.c  types.h
drivers/mysql/tests/: dml_test.c  identifier_test.c  ssl_test.c  types_test.c
drivers/postgres/: CMakeLists.txt  README.md
drivers/postgres/src/: connection.c  ddl.c  edit.c  entry.c  internal.h  metadata.c  query.c
drivers/postgres/src/utils/: dml.c  dml.h  identifier.c  identifier.h  types.c  types.h
drivers/postgres/tests/: dml_test.c  identifier_test.c  types_test.c
drivers/sqlite/: CMakeLists.txt  README.md
drivers/sqlite/src/: connection.c  ddl.c  edit.c  entry.c  internal.h  metadata.c  query.c
drivers/sqlite/src/utils/: dml.c  dml.h  identifier.c  identifier.h  types.c  types.h
drivers/sqlite/tests/: CMakeLists.txt  cancel_test.c  connection_test.c  dml_test.c  identifier_test.c  introspect_test.c  smoke_test.c  types_test.c
en/: index.html
examples/: CMakeLists.txt
examples/driver-template/: CMakeLists.txt  README.md
examples/driver-template/src/: driver.c  entry.c  internal.h
frontend/: README.md  index.html  package.json  placeholder.html  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/components/: AppToolbar.tsx  Brand.tsx  ChartView.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectionBar.tsx  ConnectionForm.tsx  ConnectionManager.tsx  ContextMenu.tsx  DataDiffWizard.tsx  DataGenerator.tsx  EmptyState.tsx  ErDiagram.tsx  ExplainPlan.tsx  FkBrowser.tsx  FkPicker.tsx  HistoryPanel.tsx  ImportWizard.tsx  IndexManager.tsx  InfoPane.tsx  Modal.tsx  Notebook.tsx  (+23 more)
frontend/tests/: setup.ts
installer/: build-msi.sh  license.rtf  quaero.wxs
scripts/smoke/: mcp.mjs  mongo-features.mjs  mysql-features.mjs  postgres-features.mjs  run.sh  smoke.mjs  sqlite-features.mjs
site/: index.html  publish.sh  styles.css
site/video/: quaero-demo.webm
tests/integration/: CMakeLists.txt  mongodb_cancel_test.c  mongodb_integration_test.c  mysql_cancel_integration_test.c  mysql_integration_test.c  mysql_ssl_integration_test.c  sqlite_integration_test.c  ssh_tunnel_integration_test.c
tools/: CMakeLists.txt  quaero-rpc.c
tools/quaero-mcp/: CMakeLists.txt  main.c  mcp_conns.c  mcp_conns.h  mcp_server.c  mcp_server.h  stmt_class.c  stmt_class.h
tools/quaero-mcp/tests/: mcp_conns_test.c  stmt_class_test.c
(+214 files in other folders)
